# video-trans

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  jobs.py  main.py  pipeline.py  srt.py
app/stages/: __init__.py  asr.py  extract.py  mux.py  translate.py  tts.py
app/static/: index.html
plans/: 2026-06-08-video-trans-vi.md
tests/: conftest.py  eval_quality.py  test_e2e.py  test_extract.py  test_jobs.py  test_mux.py  test_pipeline.py  test_srt.py  test_translate.py  test_tts.py
