[project]
name = "video-trans"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "edge-tts>=6.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "mlx-whisper>=0.4",
  "openai>=1.50",
  "pytest>=8.3",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.32",
]

[tool.pytest.ini_options]
markers = [
  "slow: tests that require real media processing or external services",
]
testpaths = ["tests"]
